demystify/src/problem/snapshots/demystify__problem__solver__tests__parse_essence-3.snap
---
source: demystify/src/problem/solver.rs
expression: puz.get_provable_varlits().clone()
snapshot_kind: text
---
{
    ~x5,
    x7,
    x8,
    ~x9,
    ~x10,
    ~x12,
    x13,
    x14,
    ~x15,
    ~x17,
    ~x18,
    ~x19,
}
