demystify/src/problem/snapshots/demystify__problem__solver__tests__random_solution_little.snap
---
source: demystify/src/problem/solver.rs
expression: sol
snapshot_kind: text
---
{
    x0,
    ~x2,
    x3,
    ~x4,
    ~x5,
    x7,
    x8,
    ~x9,
    ~x10,
    ~x12,
    x13,
    x14,
    ~x15,
    ~x17,
    ~x18,
    ~x19,
}
